--- a/web/public/assets/css/_0.base.scss
+++ b/web/public/assets/css/_0.base.scss
@@ -1,5 +1,5 @@
 /*
-	 HOVER.CSS 
+	 HOVER.CSS
 	https://github.com/IanLunn/Hover
 */
 
@@ -7,12 +7,12 @@
 
 /* Glow */
 
-
 @keyframes pop-in {
 	0% {
 		opacity: 0;
 		transform: scale(0.5);
 	}
+
 	100% {
 		opacity: 1;
 		transform: scale(1);
@@ -22,27 +22,30 @@
 /* BLINK EFFECT (caret / Cursor)*/
 
 @keyframes blink {
+
 	from,
 	to {
 		color: transparent;
 	}
+
 	50% {
 		color: $lighter-grey;
 	}
 }
 
-
 /* BACKGROUND COLOR FADE */
 
 @keyframes backgroundgradientfade {
 	0% {
-		background-position: 4% 0%
+		background-position: 4% 0%;
 	}
+
 	50% {
-		background-position: 97% 100%
+		background-position: 97% 100%;
 	}
+
 	100% {
-		background-position: 4% 0%
+		background-position: 4% 0%;
 	}
 }
 
@@ -52,11 +55,11 @@
 	0% {
 		opacity: 0;
 	}
+
 	100% {
 		opacity: 1;
 	}
 }
-
 
 .fadein {
 	animation-name: fade-in;
@@ -73,12 +76,13 @@ address {
 	font-style: normal;
 }
 
-.global-menu-wrapper{
-	background:darken(white,10%);
+.global-menu-wrapper {
+	background: darken(white, 10%);
 }
-.pure-menu-link{
-	text-decoration:underline;
-	font-size:120%;
+
+.pure-menu-link {
+	text-decoration: underline;
+	font-size: 120%;
 }
 
 html,
@@ -96,12 +100,10 @@ button,
 input,
 select,
 textarea,
-.pure-g [class *="pure-u"] {
+.pure-g [class*="pure-u"] {
 	font-family: $sans-serif;
 	font-size: 16px;
 }
-
-
 
 ::-moz-selection {
 	background: $color-selection;
@@ -120,6 +122,7 @@ textarea,
 
 #user-avatar {
 	text-align: center;
+
 	img {
 		border-radius: 50%;
 		vertical-align: middle;
@@ -128,12 +131,14 @@ textarea,
 		width: 40px;
 		height: auto;
 	}
+
 	.user-name {
 		display: block;
 		width: 75px;
 		text-align: center;
 		font-weight: bold;
 	}
+
 	.logout-link {
 		display: block;
 		font-weight: bolder;
@@ -157,7 +162,7 @@ textarea,
 
 .error-404 .content {
 	font-family: $serif;
-	font-size: 300%
+	font-size: 300%;
 }
 
 .header {
@@ -171,9 +176,12 @@ textarea,
 	line-height: 1.4;
 	font-size: 80%;
 	color: $light-grey;
+
 	a {
 		color: $light-grey;
+
 		@include link-underline(white, $light-grey, $color-selection);
+
 		&:hover {
 			color: $black;
 		}
@@ -210,8 +218,9 @@ textarea,
 	line-height: 0;
 	vertical-align: text-bottom;
 	margin-right: 1rem;
+
 	&:before {
-		content: "“";
+		content: "\201C "; // “
 	}
 }
 
@@ -222,7 +231,6 @@ textarea,
 	width: auto;
 }
 
-
 #user-avatar .pure-menu-link {
 	text-align: left;
 }
@@ -230,7 +238,6 @@ textarea,
 #global-menu {
 	font-size: 80%;
 }
-
 
 .message {
 	font-weight: bold;
@@ -247,6 +254,7 @@ textarea,
 	align-content: flex-start;
 	align-items: flex-start;
 	list-style: none;
+
 	li {
 		flex-grow: 0;
 		flex-shrink: 0;
@@ -255,22 +263,26 @@ textarea,
 		display: block;
 		margin: 0 1em;
 		padding: 0;
-		transition: all 350ms cubic-bezier(.7, .5, .3, 1);
+		transition: all 350ms cubic-bezier(0.7, 0.5, 0.3, 1);
 		backface-visibility: hidden;
 	}
+
 	li a {
 		vertical-align: top;
 		padding: 0;
 		margin: 0;
 		padding-left: 30px;
-		background: transparent url('../img/male-sign.svg') top left no-repeat;
+		background: transparent url("../img/male-sign.svg") top left no-repeat;
 	}
+
 	li.f a {
-		background-image: url('../img/female-sign.svg');
+		background-image: url("../img/female-sign.svg");
 	}
+
 	li.unknown a {
-		background-image: url('../img/unknown-sign.svg');
+		background-image: url("../img/unknown-sign.svg");
 	}
+
 	a {
 		color: $light-grey;
 		text-decoration: none;
@@ -284,10 +296,11 @@ textarea,
 		height: 40px;
 		display: block;
 		transform-style: preserve-3d;
-		transition: all 600ms cubic-bezier(.3, .7, .1, 1);
+		transition: all 600ms cubic-bezier(0.3, 0.7, 0.1, 1);
 		transform-origin: 50% 0;
 		perspective: 350px;
-		transition: all 600ms cubic-bezier(.3, .7, .1, 1);
+		transition: all 600ms cubic-bezier(0.3, 0.7, 0.1, 1);
+
 		.author-name {
 			padding: 0;
 			margin: 0;
@@ -297,6 +310,7 @@ textarea,
 			height: 20px;
 			background: white;
 		}
+
 		.author-total {
 			padding: 3px 5px;
 			margin: 0;
@@ -310,17 +324,19 @@ textarea,
 			transform: rotateX(-90deg);
 			transform-origin: 50% 0;
 			backface-visibility: visible;
-			transition: all 600ms cubic-bezier(.3, .7, .1, 1);
+			transition: all 600ms cubic-bezier(0.3, 0.7, 0.1, 1);
 		}
+
 		&:hover {
-			transition: all 350ms cubic-bezier(.7, .5, .3, 1);
+			transition: all 350ms cubic-bezier(0.7, 0.5, 0.3, 1);
 			color: $black;
+
 			.author-total {
 				background: white;
 				color: $light-grey;
 				color: black;
 				transform: rotateX(0deg);
-				transition: all 600ms cubic-bezier(.3, .7, .1, 1);
+				transition: all 600ms cubic-bezier(0.3, 0.7, 0.1, 1);
 			}
 		}
 	}
@@ -332,6 +348,7 @@ textarea,
 	text-decoration: none;
 	text-transform: none;
 	color: $light-grey;
+
 	&:hover {
 		color: black;
 	}
@@ -345,6 +362,7 @@ textarea,
 	font-weight: lighter;
 	margin-bottom: 2em;
 	display: block;
+
 	a {
 		color: $light-grey;
 	}
@@ -381,12 +399,12 @@ h2.topic-title {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-image: url('../img/man.svg');
+	background-image: url("../img/man.svg");
 	box-shadow: inset 0px 0px 45px 5px rgba(18, 18, 18, 0.19); // 	transition: all 1000ms cubic-bezier(.7, .5, .3, 1);
 }
 
 #photo.woman {
-	background-image: url('../img/woman.svg');
+	background-image: url("../img/woman.svg");
 }
 
 blockquote {
@@ -398,33 +416,34 @@ blockquote {
 
 span.randomchar {
 	@extend .fadein;
+
 	color: $lighter-grey;
 }
 
 figcaption {
 	padding-top: 1em;
 	text-align: center;
+
 	a {
-		@include link-underline(white,
-		$light-grey,
-		$color-selection,
-		85%);
+		@include link-underline(white, $light-grey, $color-selection, 85%);
 	}
+
 	.author {
 		margin-top: .7em;
 		font-size: 120%;
+
 		a {
-			@include link-underline(white,
-			$light-grey,
-			$color-selection,
-			85%);
+			@include link-underline(white, $light-grey, $color-selection, 85%);
+
 			background-image: linear-gradient($lighter-grey, $lighter-grey);
 			transition: background-image 1s ease;
+
 			&:hover {
 				background-image: linear-gradient($light-grey, $light-grey);
 				transition: background-image 1s ease;
 				color: black;
 			}
+
 			small.meta {
 				background-image: linear-gradient(white, white);
 			}
@@ -447,6 +466,7 @@ figcaption {
 	padding-top: 0px;
 	font-size: 80%;
 	color: lighten($light-grey, 20%);
+
 	a {
 		color: lighten($light-grey, 20%);
 	}
@@ -454,14 +474,14 @@ figcaption {
 
 .meta {
 	color: $light-grey;
+
 	a {
 		color: $light-grey;
 		text-decoration: none;
+
 		&:hover {
 			color: $black; //text-decoration: underline;
-			@include link-underline(white,
-			$black,
-			$color-selection);
+			@include link-underline(white, $black, $color-selection);
 		}
 	}
 }
@@ -483,39 +503,48 @@ figcaption {
 	text-decoration: none;
 	transition: all ease 0.5s;
 	box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.01);
+
 	img {
 		vertical-align: middle;
 	}
+
 	&:hover,
 	&:active {
 		background: white;
 		border: 1px solid $lighter-grey;
 		box-shadow: 6px 6px 4px 4px rgba(0, 0, 0, 0.4);
 	}
+
 	&.favourite {
-		background: transparent url('../img/heart-sprite.svg') 0 4px no-repeat;
+		background: transparent url("../img/heart-sprite.svg") 0 4px no-repeat;
+
 		em {
 			display: none;
 		}
-		color:$black;
-		padding:0;
-		width:40px;
+
+		color: $black;
+		padding: 0;
+		width: 40px;
+
 		span.total_likes {
 			color: $black;
 			text-align: center;
 			padding-left: 5px;
 		}
+
 		&:hover {
 			background-position-x: -100px;
-			background: transparent url('../img/heart-sprite.svg') -100px 4px no-repeat;
+			background: transparent url("../img/heart-sprite.svg") -100px 4px no-repeat;
 		}
+
 		&.loading {
 			background-position-x: -200px;
-			background: transparent url('../img/heart-sprite.svg') -200px 4px no-repeat;
+			background: transparent url("../img/heart-sprite.svg") -200px 4px no-repeat;
 		}
+
 		&.liked {
 			background-position-x: -300px;
-			background: transparent url('../img/heart-sprite.svg') -300px 4px no-repeat;
+			background: transparent url("../img/heart-sprite.svg") -300px 4px no-repeat;
 			color: white;
 		}
 	}
@@ -526,9 +555,11 @@ figcaption {
 	padding: 0;
 	margin: 0;
 	text-align: center;
+
 	li {
 		display: inline-block;
 		text-align: center;
+
 		a {
 			border: 1px solid $lighter-grey;
 			border-radius: 5px;
@@ -537,12 +568,14 @@ figcaption {
 			color: $light-grey;
 			text-decoration: none;
 			transition: all 300ms;
+
 			&:hover {
 				color: $black;
 				border-color: $black;
 			}
 		}
 	}
+
 	img {
 		height: 50px;
 		width: auto;
@@ -621,13 +654,35 @@ figcaption {
 	border-bottom: 1px solid $black;
 }
 
-.autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
-.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
-.autocomplete-selected { background: #F0F0F0; }
-.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
-.autocomplete-group { padding: 2px 5px; }
-.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+.autocomplete-suggestions {
+	border: 1px solid #999;
+	background: #FFF;
+	overflow: auto;
+}
 
+.autocomplete-suggestion {
+	padding: 2px 5px;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.autocomplete-selected {
+	background: #F0F0F0;
+}
+
+.autocomplete-suggestions strong {
+	font-weight: normal;
+	color: #3399FF;
+}
+
+.autocomplete-group {
+	padding: 2px 5px;
+}
+
+.autocomplete-group strong {
+	display: block;
+	border-bottom: 1px solid #000;
+}
 
 .search input {
 	padding: 10px;
@@ -636,7 +691,8 @@ figcaption {
 	color: $lighter-grey;
 	display: block;
 	margin: 20px 0;
-	transition: all 350ms cubic-bezier(.7, .5, .3, 1);
+	transition: all 350ms cubic-bezier(0.7, 0.5, 0.3, 1);
+
 	&:focus {
 		outline: dotted;
 		outline: 1px solid $light-grey;
@@ -652,6 +708,7 @@ figcaption {
 .latest-quotes-list {
 	text-align: center;
 	list-style: none;
+
 	time {
 		display: block;
 	}
@@ -659,6 +716,7 @@ figcaption {
 
 .avatar-small {
 	@extend #photo;
+
 	width: 44px;
 	height: 44px;
 	display: inline-block;
@@ -686,11 +744,10 @@ figcaption {
 .quote-short a {
 	text-decoration: none;
 	color: $black;
+
 	&:hover {
 		//text-decoration: underline;
-		@include link-underline(white,
-		$black,
-		$color-selection);
+		@include link-underline(white, $black, $color-selection);
 	}
 }
 
@@ -701,7 +758,7 @@ figcaption {
 	text-align: center;
 	max-width: 990px;
 	margin: 0 auto 4rem;
-	border-radius: 10px
+	border-radius: 10px;
 }
 
 /* FORM ELEMENTS */
@@ -710,21 +767,20 @@ form {
 	padding: 2em;
 }
 
-
 body.of-author {
 	.quote {
-		transition: all 350ms cubic-bezier(.7, .5, .3, 1);
+		transition: all 350ms cubic-bezier(0.7, 0.5, 0.3, 1);
+
 		figcaption {
 			opacity: 0.3;
-			transition: all 350ms cubic-bezier(.7, .5, .3, 1);
+			transition: all 350ms cubic-bezier(0.7, 0.5, 0.3, 1);
 		}
+
 		&:hover figcaption {
 			opacity: 1;
 		}
 	}
 }
-
-
 
 /* STICKY HEADER */
 
@@ -741,27 +797,32 @@ body.of-author {
 	padding-left: 2em;
 	padding-right: 2em;
 	font-size: 80%;
+
 	/* Translate -100% to move off screen */
 
 	transform: translateY(-100%);
+
 	/* Animations */
-	transition: all 600ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+	transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
+
 	/* easeOutQuint */
-	transition-timing-function: cubic-bezier(0.230, 1.000, 0.320, 1.000);
+	transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
+
 	/* easeOutQuint */
 	h1 {
 		display: none;
 	}
+
 	.photo {
 		width: 100px;
 		height: 100px;
 	}
+
 	&.headhesive--stick {
 		/* Translate back to 0%; */
 		transform: translateY(0%);
 	}
 }
-
 
 // Hamburger menu
 .custom-wrapper {
@@ -770,6 +831,7 @@ body.of-author {
 	height: 2.3em;
 	overflow: hidden;
 	transition: height 0.5s;
+
 	&.open {
 		height: 14em;
 	}
@@ -792,14 +854,59 @@ body.of-author {
 		top: 18px;
 		right: 7px;
 		transition: all 0.5s;
+
 		&:first-child {
 			transform: translateY(-6px);
 		}
 	}
+
 	&.x .bar {
 		transform: rotate(45deg);
+
 		&:first-child {
 			transform: rotate(-45deg);
 		}
+	}
+}
+
+a.search-icon {
+	text-decoration: none;
+	background-image: none;
+
+	svg {
+		fill: #333;
+		width: 20px;
+		height: 20px;
+	}
+}
+
+body.search {
+	section.searchform {
+		background: #F7F7F7;
+	}
+
+	form {
+		margin: auto;
+		max-width: 600px;
+	}
+
+	#searchinput {
+		font-size: 24px;
+		color: black;
+		border: 1px solid #DDD;
+		padding: 10px;
+		width: 100%;
+	}
+
+	input[type=submit] {
+		background: black;
+		color: white;
+		height: 100%;
+		width: 100%;
+		padding: 10px;
+		font-size: 18px;
+		line-height: 31px;
+		font-weight: lighter;
+		display: block;
 	}
 }
